--- a/index.html
+++ b/index.html
@@ -11,18 +11,34 @@
   <meta property="og:type" content="website" />
   <link rel="icon" href="assets/favicon.png" />
   <style>
-    :root{
-      --bg:#0b1020;
-      --fg:#e6edf3;
-      --muted:#a0aec0;
-      --link:#38bdf8;
-      --chip:#111827;
-      --chipfg:#c7d2fe;
-      --card:#0f172a;
-      --accent:#e5e7eb;
-      --highlight:#fff8dc;
-      --maxw: 880px;
-    }
+    :root {
+  --bg: #fdf6e3; /* cream for light mode */
+  --fg: #1a1a1a;
+  --muted: #a0aec0;
+  --link: #38bdf8;
+  --chip: #f0e7db;
+  --chipfg: #333;
+  --card: #fffbe6;
+  --accent: #e5e7eb;
+  --highlight: #fff8dc;
+}
+
+body {
+  background: var(--bg);
+  color: var(--fg);
+}
+
+.dark-mode {
+  --bg: #282c34; /* grey for dark mode */
+  --fg: #e6edf3;
+  --muted: #ced4dc;
+  --link: #38bdf8;
+  --chip: #33343b;
+  --chipfg: #c7d2fe;
+  --card: #3a3d42;
+  --accent: #22292f;
+  --highlight: #fff8dc;
+}
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--fg);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial,"Noto Sans",sans-serif}
     a{color:var(--link);text-decoration:none}
@@ -63,7 +79,7 @@
     <!-- Header -->
     <header>
       <!-- Swap to your own headshot -->
-      <img src="assets/headshot.jpeg" alt="Tavishi Sharma headshot" />
+      <img src="IMG_2090 2.jpeg" alt="Tavishi Sharma headshot" />
       <div>
         <h1>Tavishi Sharma</h1>
         <div class="subtitle">BS, Computer Science @ ASU Barrett Honors · Minor in Mathematics</div>
@@ -86,6 +102,12 @@
       <a href="#contact">Contact</a>
     </div>
   </nav>
+  <div class="wrap" style="display:flex;justify-content:flex-end;">
+  <button onclick="toggleTheme()" aria-label="Toggle theme" id="themeBtn" style="margin:12px 0;padding:8px 18px;border-radius:8px;border:none;cursor:pointer;font-weight:500;">
+    🌙 Dark Mode
+  </button>
+</div>
+
   <main class="wrap">
     <!-- About -->
     <section id="about">
@@ -164,5 +186,23 @@
     document.addEventListener('scroll', onScroll, { passive: true });
     onScroll();
   </script>
+  <script>
+  function toggleTheme() {
+    document.body.classList.toggle('dark-mode');
+    const isDark = document.body.classList.contains('dark-mode');
+    document.getElementById('themeBtn').textContent = isDark ? '☀️ Light Mode' : '🌙 Dark Mode';
+    // Optionally save preference
+    localStorage.setItem('theme', isDark ? 'dark' : 'light');
+  }
+
+  // On load, restore preference
+  window.onload = function() {
+    const pref = localStorage.getItem('theme');
+    if (pref === 'dark') {
+      document.body.classList.add('dark-mode');
+      document.getElementById('themeBtn').textContent = '☀️ Light Mode';
+    }
+  }
+</script>
 </body>
 </html>
