--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       --card: #3a3d42;
       --accent: #22292f;
       --highlight: #fff8dc;
-      --toggle-bg: #fdf6e3;
+      --toggle-bg: #00000;
       --toggle-text: #1a1a1a;
     }
     *{box-sizing:border-box}
