--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       --card: #fffbe6;
       --accent: #e5e7eb;
       --highlight: #0b1020;
-      --toggle-bg: #e5e7eb;
+      --toggle-bg: #000000;
       --toggle-text: #1a1a1a;
       --maxw: 880px;
     }
@@ -40,7 +40,7 @@
       --card: #3a3d42;
       --accent: #22292f;
       --highlight: #fff8dc;
-      --toggle-bg: #00000;
+      --toggle-bg: #fdf6e3;
       --toggle-text: #1a1a1a;
     }
     *{box-sizing:border-box}
