--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       --card: #fffbe6;
       --accent: #e5e7eb;
       --highlight: #0b1020;
-      --toggle-bg: #ffffff;
+      --toggle-bg: #000000;
       --toggle-text: #1a1a1a;
-      --timeline: #4b2679;   
+      --timeline: #4b2679;
       --maxw: 880px;
     }
     body {
@@ -41,7 +41,7 @@
       --card: #3a3d42;
       --accent: #22292f;
       --highlight: #fff8dc;
-      --toggle-bg: #000000;
+      --toggle-bg: #ffffff;
       --toggle-text: #1a1a1a;
       --timeline: #4b2679;
     }
@@ -77,7 +77,8 @@
     details{margin-top:8px}
     code{font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace; font-size:13px}
     footer{padding:40px 0;color:var(--muted);font-size:14px}
-    .small{font-size:14px;color:var(--muted)}
+    /* CHANGED: .small text color - now dark grey (#444) for better readability */
+    .small{font-size:14px;color:#444;}  /* CHANGED */
     /* Toggle Button styles */
     #themeBtn {
       margin: 0 24px 0 0;
@@ -152,6 +153,42 @@
       .wrap { padding: 12px; }
       h2 { font-size: 1.5em;}
     }
+
+    /* CHANGED: Fun Contact Section Styles */
+    .contact-list { 
+      display: flex; 
+      flex-wrap: wrap; 
+      align-items: center; 
+      gap: 22px; 
+      margin: 14px 0 0 0; 
+      list-style: none; 
+      padding-left: 0; 
+    } /* CHANGED */
+    .contact-icon { 
+      width: 38px; 
+      height: 38px; 
+      background: var(--card); 
+      border-radius: 50%; 
+      display: flex; 
+      align-items: center; 
+      justify-content: center; 
+      font-size: 1.7em; 
+      box-shadow: 0 2px 7px rgba(0,0,0,.07);
+      margin-right: 9px;
+    } /* CHANGED */
+    .contact-link { 
+      font-size: 1.09em; 
+      color: var(--link); 
+      font-weight: 500; 
+      text-decoration: none; 
+      transition: color 0.17s; 
+      display: flex; 
+      align-items: center;
+    } /* CHANGED */
+    .contact-link:hover { 
+      color: #4b2679; 
+    } /* CHANGED */
+    .contact-info { margin-top: 10px; font-size: 1.13em; color: var(--fg);}
   </style>
 </head>
 <body>
@@ -164,7 +201,8 @@
       <div>
         <h1>Tavishi Sharma</h1>
         <div class="subtitle">BS, Computer Science @ ASU Barrett Honors · Minor in Mathematics</div>
-        <div class="small">GPA: 3.88 · Graduation: May 2026 · Dean's List: Fall 2022, Spring 2023, Fall 2023, Spring 2024, Fall 2024, Spring 2025</div>
+        <div class="small">GPA: 3.88 · Graduation: May 2026</div>
+        <div class="small">Dean's List: Fall 2022, Spring 2023, Fall 2023, Spring 2024, Fall 2024, Spring 2025</div>
         <div class="links">
           <a class="chip" href="mailto:tavishisharma0505@gmail.com" aria-label="Email">Email</a>
           <a class="chip" href="https://github.com/Sharma-Tavishi" target="_blank" rel="noopener">GitHub</a>
@@ -279,14 +317,35 @@
         <li><strong>Languages:</strong> English, A1 French [Ministry of Education, France]</li>
       </ul>
     </section>
-    <!-- Contact -->
+    <!-- CHANGED: Fun Contact Section -->
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:tavishisharma0505@gmail.com">tavishisharma0505@gmail.com</a><br>
-         GitHub: <a href="https://github.com/Sharma-Tavishi" target="_blank" rel="noopener">@Sharma-Tavishi</a><br>
-         LinkedIn: <a href="https://www.linkedin.com/in/tavishi-sharma05/" target="_blank" rel="noopener">Tavishi Sharma</a><br>
-         Phone: +1-602-570-1736</p>
+      <ul class="contact-list">
+        <li>
+          <a class="contact-link" href="mailto:tavishisharma0505@gmail.com">
+            <span class="contact-icon">📧</span>
+            Email Me
+          </a>
+        </li>
+        <li>
+          <a class="contact-link" href="https://github.com/Sharma-Tavishi" target="_blank" rel="noopener">
+            <span class="contact-icon">🐙</span>
+            GitHub
+          </a>
+        </li>
+        <li>
+          <a class="contact-link" href="https://www.linkedin.com/in/tavishi-sharma05/" target="_blank" rel="noopener">
+            <span class="contact-icon">💼</span>
+            LinkedIn
+          </a>
+        </li>
+        <li>
+          <span class="contact-icon">📱</span>
+          <span class="contact-info">+1-602-570-1736</span>
+        </li>
+      </ul>
     </section>
+    <!-- End CHANGED -->
     <footer>
       <div>© <span id="y"></span> Tavishi Sharma. Built with plain HTML/CSS. <span class="small">Last updated: Sep 2025.</span></div>
     </footer>
