--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       --chip: #f0e7db;
       --chipfg: #333;
       --card: #fffbe6;
-      --accent: #e5e7eb;
+      --accent: #000000;
       --highlight: #0b1020;
       --toggle-bg: #ffffff;
       --toggle-text: #1a1a1a;
@@ -36,7 +36,7 @@
       --chip: #33343b;
       --chipfg: #c7d2fe;
       --card: #3a3d42;
-      --accent: #22292f;
+      --accent: #000000;
       --highlight: #fff8dc;
       --toggle-bg: #000000;
       --toggle-text: #1a1a1a;
@@ -268,7 +268,7 @@
         <div class="timeline-item">
           <div class="timeline-dot"></div>
           <div class="timeline-content">
-             <div class="timeline-date">Jan 2023 &mdash; Dec 2024</div>
+             <div class="timeline-date">January 2023 &mdash; Present</div>
             <b>Undergraduate Teaching Assistant, ASU</b>
             <ul>
               <li>Supported classes: Engineering & Digital Design</li>
@@ -279,7 +279,16 @@
         <div class="timeline-item">
           <div class="timeline-dot"></div>
           <div class="timeline-content">
-            <div class="timeline-date">Aug 2024 &mdash; May 2025</div>
+            <div class="timeline-date">June 2025 &mdash; August 2025</div>
+            <b>Software Engineering Intern, SelfBest</b>
+            <ul>
+              <li>Managed software operations & holistic workflows</li>
+              <li>Benchmarked productivity tools for engineers</li>
+              <li>Improved platform usability features</li>
+            </ul>
+          </div>
+        </div>
+            <div class="timeline-date">August 2024 &mdash; May 2025</div>
             <b>Research Fellow, NASA JPL (ASU)</b>
             <ul>
               <li>Led AI/human-robot collaboration research</li>
