--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       --fg: #1a1a1a;
       --muted: #a0aec0;
       --link: #38bdf8;
-      --chip: #000000;
+      --chip: #f0e7db;
       --chipfg: #333;
       --card: #fffbe6;
       --accent: #000000;
@@ -33,7 +33,7 @@
       --fg: #e6edf3;
       --muted: #ced4dc;
       --link: #38bdf8;
-      --chip: #000000;
+      --chip: #33343b;
       --chipfg: #c7d2fe;
       --card: #3a3d42;
       --accent: #000000;
